add genre explanation to the notebook

--- a/Person_A.ipynb
+++ b/Person_A.ipynb
@@ -546,6 +546,42 @@
     "plt.savefig('depression_factors_diet_and_Family_History.png', dpi=120, bbox_inches='tight', facecolor='white')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Genre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For our project on student depression, we chose a **magazine-style narrative** combined with **annotated charts** to communicate our findings in a clear and engaging way.\n",
+    "\n",
+    "### Visual Narrative (Segel & Heer)\n",
+    "\n",
+    "- **Visual Structuring: Consistent Visual Platform**  \n",
+    "  We maintained a consistent visual design throughout the article, changing only the content across sections. This uniformity reinforces a serious and professional tone appropriate for the sensitive and important topic we address.\n",
+    "\n",
+    "- **Highlighting: Feature Distinction**  \n",
+    "  To draw attention to key takeaways from the data, we used bold text for emphasis and positioned charts and maps centrally on the page. This visual choice helps to focus on the most critical insights.\n",
+    "\n",
+    "- **Transition Guidance: Familiar Objects**  \n",
+    "  We ensured consistency in plot styles, such as using the same color schemes and layouts across charts. This approach creates a smoother reading experience by helping readers stay oriented as they move from one section to the next.\n",
+    "\n",
+    "### Narrative Structure\n",
+    "\n",
+    "- **Ordering: Linear**  \n",
+    "  Our article follows a linear structure, beginning with an introduction to the topic, followed by data-driven explanatory sections, and concluding with a summary. This straightforward progression supports a clear and coherent narrative flow.\n",
+    "\n",
+    "- **Interactivity: Very Limited Interactivity**  \n",
+    "  While most of our visualizations are static to keep the focus on core messages, we included one interactive plot that allows readers to explore how various factors contribute to student depression. This balances informative depth with simplicity.\n",
+    "\n",
+    "- **Messaging: Accompanying Article, Captions/Headlines, Summary/Synthesis**  \n",
+    "  As our project adopts a traditional article format, we use standard messaging elements such as section headlines, informative captions, and explanatory text. A concluding summary synthesizes the main points, ensuring that the reader leaves with a clear understanding of the data story.\n"
+   ]
   }
  ],
  "metadata": {
