--- a/Behind _the_grade_notebook.ipynb
+++ b/Behind _the_grade_notebook.ipynb
@@ -1349,6 +1349,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The purpose of interactive plots is to explain show of different factors affect the depression rate in students. Grouped bar plots helps understand the scale per each presented category."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 6. Discussion\n",
     "\n",
     "### What Went Well:\n",
