minor change added

--- a/Behind_the_grade_notebook.ipynb
+++ b/Behind_the_grade_notebook.ipynb
@@ -1114,11 +1114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Depression Rate Across Indian Cities – Marker Map\n",
+    "### Depression Rate Across Indian Cities\n",
+    "### Marker Map\n",
     "\n",
     "To better understand how student depression rates vary geographically, we visualized city-level depression statistics on an interactive map of India. Each city is represented as a circle marker, where:\n",
     "\n",
-    "- **Radius size** corresponds to the depression rate — larger circles indicate higher prevalence.\n",
+    "- **Radius size** corresponds to the depression rate, larger circles indicate higher prevalence.\n",
     "- **Color intensity** transitions from green to dark red, reflecting increasing levels of reported depression.\n",
     "\n",
     "This kind of spatial visualization is especially effective because it  enables intuitive, visual pattern recognition. Unlike bar plots or summary tables, a map allows us to see clusters and outliers at a glance, which may guide further investigation or targeted mental health interventions.\n",
@@ -1987,7 +1988,7 @@
     "| Contributor | Tasks Completed |\n",
     "|-------------|-----------------|\n",
     "| **Upasana Paul  s242577** | - Website setup<br>- Pie chart of Mental Health Risk Assessment<br>- Bar chart of  Combined Impact of Diet and Sleep on Depression Risk<br>- Motivation and website introduction|\n",
-    "| **Pawel Nepelski  s233537** | - Interactive chart on stress-provoking metrics and depression<br>- Correlation paragraph (visual interpretation and/or statistical analysis)<br>\n",
+    "| **Pawel Nepelski  s233537** | - Interactive chart on stress-provoking metrics and depression<br>- Correlation paragraph (visual interpretation and/or statistical analysis)|\n",
     "| **Henrietta Domokos  s233107** | - Explanatory notebook creation (Data cleaning and Analysis)<br>- Map for the website<br>- Closing paragraph for the website |\n"
    ]
   },
