minor change added

--- a/Behind_the_grade_notebook.ipynb
+++ b/Behind_the_grade_notebook.ipynb
@@ -1117,7 +1117,7 @@
     "### Depression Rate Across Indian Cities\n",
     "### Marker Map\n",
     "\n",
-    "To better understand how student depression rates vary geographically, we visualized city-level depression statistics on an interactive map of India. Each city is represented as a circle marker, where:\n",
+    "To better understand how student depression rates vary geographically, we visualized city level depression statistics on an interactive map of India. Each city is represented as a circle marker, where:\n",
     "\n",
     "- **Radius size** corresponds to the depression rate, larger circles indicate higher prevalence.\n",
     "- **Color intensity** transitions from green to dark red, reflecting increasing levels of reported depression.\n",
