--- a/Behind_the_grade_notebook.ipynb
+++ b/Behind_the_grade_notebook.ipynb
@@ -1987,7 +1987,7 @@
     "\n",
     "| Contributor | Tasks Completed |\n",
     "|-------------|-----------------|\n",
-    "| **Upasana Paul  s242577** | - Website setup<br>- Pie chart of Mental Health Risk Assessment<br>- Bar chart of  Combined Impact of Diet and Sleep on Depression Risk<br>- Motivation and website introduction|\n",
+    "| **Upasana Paul  s242577** | - Website setup and design<br>- creation of Pie chart of Mental Health Risk Assessment and writing description<br>- creation of Bar chart of  Combined Impact of Diet and Sleep on Depression Risk and writing description<br>- Motivation in notebook and website introduction,suggestion for improvemet|\n",
     "| **Pawel Nepelski  s233537** | - Interactive chart on stress-provoking metrics and depression<br>- Correlation paragraph (visual interpretation and/or statistical analysis)|\n",
     "| **Henrietta Domokos  s233107** | - Explanatory notebook creation (Data cleaning and Analysis)<br>- Map for the website<br>- Closing paragraph for the website |\n"
    ]
